
Change Log for Kicad
Started 2007-June-11

Please add newer entries at the top, list the date and your name with
email address.


2008-May-2 UPDATE Dick Hollenbeck <dick@softplc.com>
================================================================================
+pcbnew
  * Added ZONE_CONTAINER::GetBoundingBox() and used it to clean up
    ZONE_CONTAINER deletion.
  * For end of edge dragging activity: used full DrawPanel->Refresh()
    to clean up all XOR artifacts.


2008-May-1 UPDATE Dick Hollenbeck <dick@softplc.com>
================================================================================
+pcbnew
  * Fixed bugs in layer name handling within the BOARD


2008-Apr-30 UPDATE   Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
================================================================================
+eeschema:
    made in some dialogs the ESC key working (linux version, already working under windows)
    screen number and screen count now are set


2008-Apr-29 UPDATE Dick Hollenbeck <dick@softplc.com>
================================================================================
+pcbnew
  * Added WinEDA_PcbFrame::UpdateToolbarLayerInfo() by factoring it out of
    ReCreateLayerBox().
  * Changed call in void WinEDA_PcbFrame::SetToolbars() from ReCreateLayerBox()
    to UpdateToolbarLayerInfo().
  * Removed calls to SetToolbars() from:
      > share/drawpanel.cpp's void WinEDA_DrawPanel::OnMouseEvent( wxMouseEvent& event )
      > void WinEDA_BasePcbFrame::GeneralControle( wxDC* DC, wxPoint Mouse )


2008-Apr-28 UPDATE Dick Hollenbeck <dick@softplc.com>
================================================================================
+pcbnew
  * Layer names were not being set into the htoolbar listbox properly if the
    BOARD was loaded via the command line as happens when kicad chain loads
    pcbnew. Also, layer names were not being set if a second board was loaded
    that had the same number of layers as the previous board. The solution was