@@ -1,0 +1,8 @@
+/* Do not modify this file, it was automatically generated by CMake */
+
+#ifndef __KICAD_SVN_VERSION_H__
+#define __KICAD_SVN_VERSION_H__
+
+#cmakedefine KICAD_SVN_VERSION "@KICAD_SVN_VERSION@"
+
+#endif  /* __KICAD_SVN_VERSION_H__ */
