@@ -5,6 +5,13 @@ Started 2007-June-11
 Please add newer entries at the top, list the date and your name with
 email address.
 
+2008-May-2 UPDATE Wayne Stambaugh <stambaughw@verizon.net>
+================================================================================
++cmake
+  * Use Subversion to automatically generate build date and revision level
+    when building with CMake.  Header file build_version.h will still need
+    manual updates when using the hand written make files.
+
 
 2008-May-2 UPDATE Dick Hollenbeck <dick@softplc.com>
 ================================================================================
